# smelt

./: README.md  REFERENCES.md  pyproject.toml
.github/workflows/: lint.yml
benches/: bench.py  bench_results.json  run_all.ipynb
notebooks/: 01_ternary.ipynb  02_plac.ipynb  03_int_fcnn.ipynb  03_integer_ops.ipynb  04_int_softmax.ipynb  05_int_norm.ipynb  06_attention.ipynb  07_bitnet.ipynb  08_finetune.ipynb  08_qat.ipynb  09_ptqtp.ipynb  10_speculative.ipynb  11_benchmark.ipynb
smelt/: __init__.py  _clib.py  _ops.py  attention.py  convert.py  finetune.py  matmul.py  norm.py  plac.py  ptqtp.py  qtensor.py  quantize.py  rmsnorm.py  rope.py  softmax.py
smelt/csrc/: int8_gemm.c  int_ops.c  norm_int.c  plac_eval.c  rmsnorm_int.c  softmax_int.c  ternary_gemm.c  torch_binding.cpp
tests/: test_attention.py  test_convert.py  test_finetune.py  test_matmul.py  test_norm.py  test_plac.py  test_quantize.py  test_rmsnorm.py  test_rope.py  test_softmax.py
