[project]
name = "smelt"
version = "0.1.0"
description = "Compile LLMs to integer inference."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.51",
    "safetensors>=0.4",
    "numpy>=1.26",
    "accelerate>=0.26",
    "ninja",
]

[project.optional-dependencies]
train = [
    "onebitllms",
    "trl>=1.0",
    "datasets>=2.14",
]
bench = [
    "psutil",
    "matplotlib",
]
notebooks = [
    "matplotlib>=3.7",
    "jupyter",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "psutil",
    "llama-cpp-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["smelt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
